# morse-code-converter

./: README.md  pyproject.toml
src/cli/: converter.py  main.py
src/converter/: converter.py  main.py
tests/cli/: test_main.py
